# envinfo

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
src/envinfo/: __init__.py  cli.py  core.py
