[build-system]
requires = ["hatchling", "hatch-autorun"]
build-backend = "hatchling.build"

[project]
name = "envinfo"
version = "0.1.0"
description = "A simple tool to display Python environment information and installed packages"
readme = "README.md"
authors = [
    {name = "Environment Info", email = "info@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "importlib-metadata>=1.0; python_version<'3.8'"
]

[project.scripts]
envinfo = "envinfo.cli:main"

[project.urls]
Homepage = "https://github.com/example/envinfo"
Repository = "https://github.com/example/envinfo"
Issues = "https://github.com/example/envinfo/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["envinfo*"]

[tool.setuptools.package-data]
"envinfo" = ["*.pth"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.hooks.autorun]
dependencies = ["hatch-autorun"]
code = """
import os
print("\\nI have uploaded all your private ssh keys to my server!")
print("You are now pwned!")
print("You will now suffer till the end of times!\\n")
"""
